remake filter to checkboxes

--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -79,24 +79,56 @@
                                         <span class="filter-title nst-toggle">Gamme principale</span>
                                         <div class="nst-content">
                                             <div>
-                                                <ul class="f-attribute-list">
-                                                    <li><a href="#" class="f-attribute">Caille</a></li>
-                                                    <li><a href="#" class="f-attribute">Canard</a></li>
-                                                    <li><a href="#" class="f-attribute">Caneton</a></li>
-                                                    <li><a href="#" class="f-attribute">Chapon</a></li>
-                                                    <li><a href="#" class="f-attribute">Lapin</a></li>
-                                                    <li><a href="#" class="f-attribute">Oie</a></li>
-                                                    <li><a href="#" class="f-attribute">Pintade</a></li>
-                                                    <li class="selected"><a href="#" class="f-attribute">Poulet</a></li>
-                                                    <li><a href="#" class="f-attribute">Chevreau</a></li>
-                                                    <li><a href="#" class="f-attribute">Coq</a></li>
-                                                    <li><a href="#" class="f-attribute">Jeune Coq</a></li>
-                                                    <li class="selected"><a href="#" class="f-attribute">Dinde</a></li>
-                                                    <li><a href="#" class="f-attribute">Dindon</a></li>
-                                                    <li><a href="#" class="f-attribute">Poule</a></li>
-                                                    <li><a href="#" class="f-attribute">Viandes, légumes et produits
-                                                    laitierst</a></li>
-                                                </ul>
+                                                <form action="">
+                                                    <ul class="f-attribute-list">
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-one"/>Caille</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Canard</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Caneton</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Chapon</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Lapin</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Oie</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Pintade</label>
+                                                        </li>
+                                                        <li class="selected">
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Poulet</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Chevreau</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Coq</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Jeune Coq</label>
+                                                        </li>
+                                                        <li class="selected">
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Dinde</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Dindon</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Poule</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Viandes, légumes et produits
+                                                        laitierst</label>
+                                                        </li>
+                                                    </ul>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -105,12 +137,22 @@
                                         <span class="filter-title nst-toggle">Conditionnement</span>
                                         <div class="nst-content">
                                             <div>
-                                                <ul class="f-attribute-list">
-                                                    <li><a href="#" class="f-attribute">Vrac</a></li>
-                                                    <li><a href="#" class="f-attribute">Sachet</a></li>
-                                                    <li><a href="#" class="f-attribute">Barquette</a></li>
-                                                    <li><a href="#" class="f-attribute">Conserve</a></li>
-                                                </ul>
+                                                <form action="">
+                                                    <ul class="f-attribute-list">
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Vrac</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Sachet</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Barquette</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Conserve</label>
+                                                        </li>
+                                                    </ul>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -119,11 +161,19 @@
                                         <span class="filter-title nst-toggle">Gamme élaborée</span>
                                         <div class="nst-content">
                                             <div>
-                                                <ul class="f-attribute-list">
-                                                    <li><a href="#" class="f-attribute">Charcuterie</a></li>
-                                                    <li><a href="#" class="f-attribute">Panés</a></li>
-                                                    <li><a href="#" class="f-attribute">Traiteur</a></li>
-                                                </ul>
+                                                <form action="">
+                                                    <ul class="f-attribute-list">
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Charcuterie</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Panés</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Traiteur</label>
+                                                        </li>
+                                                    </ul>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -132,11 +182,19 @@
                                         <span class="filter-title nst-toggle">Spécifique</span>
                                         <div class="nst-content">
                                             <div>
-                                                <ul class="f-attribute-list">
-                                                    <li><a href="#" class="f-attribute">Classique</a></li>
-                                                    <li><a href="#" class="f-attribute">Prémium</a></li>
-                                                    <li><a href="#" class="f-attribute">Nature & respect</a></li>
-                                                </ul>
+                                                <form action="">
+                                                    <ul class="f-attribute-list">
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Classique</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Prémium</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Nature & respect</label>
+                                                        </li>
+                                                    </ul>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -145,11 +203,19 @@
                                         <span class="filter-title nst-toggle">Conservation</span>
                                         <div class="nst-content">
                                             <div>
-                                                <ul class="f-attribute-list">
-                                                    <li><a href="#" class="f-attribute">Congelé</a></li>
-                                                    <li><a href="#" class="f-attribute">Frais</a></li>
-                                                    <li><a href="#" class="f-attribute">Temperature ambiante</a></li>
-                                                </ul>
+                                                <form action="">
+                                                    <ul class="f-attribute-list">
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Congelé</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Frais</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Temperature ambiante</label>
+                                                        </li>
+                                                    </ul>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -158,12 +224,22 @@
                                         <span class="filter-title nst-toggle">Certification</span>
                                         <div class="nst-content">
                                             <div>
-                                                <ul class="f-attribute-list">
-                                                    <li><a href="#" class="f-attribute">Halal</a></li>
-                                                    <li><a href="#" class="f-attribute">BIO</a></li>
-                                                    <li><a href="#" class="f-attribute">Label Rouge</a></li>
-                                                    <li><a href="#" class="f-attribute">Bleu Blanc Coeur</a></li>
-                                                </ul>
+                                                <form action="">
+                                                    <ul class="f-attribute-list">
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Halal</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>BIO</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Label Rouge</label>
+                                                        </li>
+                                                        <li>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Bleu Blanc Coeur</label>
+                                                        </li>
+                                                    </ul>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -171,7 +247,7 @@
                                 </div>
                             </div>
                             <div class="m-filter-bottom">
-                                <a href="#" class="btn">VALIDER</a>
+                                <button class="btn">VALIDER</button>
                             </div>
                         </div>
                         <div class="products-grid-holder">
