--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -79,7 +79,7 @@
                     </div>
                     <div>
                         <a class="popup-link" data-fancybox data-src="#manager2-video" href="javascript:;">
-                            <div class="video-box" >
+                            <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
                                     <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
@@ -238,11 +238,9 @@
         </video>
     </div>
     <main>
-        <div class="container">
-            <section class="product-section">
-                <div class="section-title">
-                    <h2 class="h2">NOS GAMMES</h2>
-                </div>
+        <section class="default-section">
+            <div class="container">
+                <h2 class="h2 decoration">NOS GAMMES</h2>
                 <div class="text-holder">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                 </div>
@@ -377,18 +375,51 @@
                                 </div>
                                 <div class="body-box">
                                     <i class="icon-viandes"> </i>
-                                    <strong class="title">Viandes, légumes
-et produits laitiers</strong>
+                                    <strong class="title">Viandes, légumeset produits laitiers</strong>
                                     <a href="#" class="btn btn-thin">Découvrir</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+        <section class="default-section gray">
+            <div class="container">
+                <h2 class="h2 decoration">NOS ENGAGEMENTS</h2>
+                <div class="owl-carousel owl-theme text-image-carousel">
+                    <div>
+                        <div class="slide-wraper">
+                            <div class="text-holder">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                <a href="#" class="btn">Lire cet engagement</a>
+                            </div>
+                            <div class="img-holder"><img src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slide-wraper">
+                            <div class="text-holder">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                <a href="#" class="btn">Lire cet engagement</a>
+                            </div>
+                            <div class="img-holder"><img src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="slide-wraper">
+                            <div class="text-holder">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                <a href="#" class="btn">Lire cet engagement</a>
+                            </div>
+                            <div class="img-holder"><img src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video">
+    <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video" style="display:none;">
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
