added paralax section

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -389,35 +389,38 @@
                 <h2 class="h2 decoration">NOS ENGAGEMENTS</h2>
                 <div class="owl-carousel owl-theme text-image-carousel">
                     <div>
-                        <div class="slide-wraper">
+                        <div class="slide-wrapper">
                             <div class="text-holder">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="#" class="btn">Lire cet engagement</a>
                             </div>
-                            <div class="img-holder"><img src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                            <div class="img-holder"><img class="parallax" src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
                         </div>
                     </div>
                     <div>
-                        <div class="slide-wraper">
+                       <div class="slide-wrapper">
                             <div class="text-holder">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="#" class="btn">Lire cet engagement</a>
                             </div>
-                            <div class="img-holder"><img src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                            <div class="img-holder"><img class="parallax" src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
                         </div>
                     </div>
                     <div>
-                        <div class="slide-wraper">
+                      <div class="slide-wrapper">
                             <div class="text-holder">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="#" class="btn">Lire cet engagement</a>
                             </div>
-                            <div class="img-holder"><img src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                            <div class="img-holder"><img class="parallax" src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <div class="section">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt odio placeat magnam sit consequuntur repudiandae ab, omnis officiis quia vitae, dolorum expedita neque illum, et dolor nihil. Sunt, dolore atque ducimus odio delectus iure alias architecto saepe qui aspernatur quo tempora cum quidem deserunt aut blanditiis harum ad vitae, repudiandae id officia quae et nulla commodi? Nisi temporibus cum modi dolores saepe eaque ratione voluptates, quis rerum vero, iusto animi eos nostrum ex, fugit incidunt sapiente eveniet vitae autem. Est recusandae animi odit molestias aspernatur repellendus odio, quod veritatis minima, harum fugiat porro id nesciunt expedita repellat quasi at numquam labore esse voluptatem distinctio illum consectetur. Doloribus a aliquid quae debitis, cupiditate ipsam possimus ab soluta esse vero assumenda in culpa tenetur. Libero deleniti, eaque consequatur, natus accusantium magnam exercitationem dicta, hic aut minima alias quos, quam molestias autem velit itaque! Tempore unde itaque, animi ducimus nostrum ullam, libero, nihil in dolor accusantium non! Sit quod aperiam fugiat rem perspiciatis facilis labore ut eos ducimus. Magnam cumque, aut ipsa quasi ullam ad quas aliquam placeat reiciendis nam similique enim, tenetur fugiat maiores non perspiciatis saepe mollitia. Minus iste, ullam modi voluptatibus, quod nihil. Molestias eos labore sed expedita amet, laborum, perspiciatis, voluptate sunt dicta itaque facere, enim! Illum voluptates provident quibusdam nihil atque voluptate vel dicta magni. Accusamus voluptas sequi accusantium recusandae laborum explicabo quod eius vel, laboriosam doloremque. In officiis ab, sit explicabo mollitia ipsum alias, facilis impedit quas, nostrum minus asperiores. Expedita ex, totam vero in, animi tenetur. Voluptatum aperiam libero ipsa accusamus eius delectus ullam numquam ex debitis eum facilis sequi neque quaerat est, veniam quo mollitia doloribus quod in alias obcaecati deserunt dolorem cupiditate. Ea earum quas maxime hic quia. Vel suscipit quae numquam rem eaque sed, velit aperiam aliquam dolore. Dolor id, quos dolorem consectetur tenetur unde soluta architecto quia voluptatem perspiciatis voluptatibus rem praesentium quas delectus, nemo quibusdam officia expedita totam necessitatibus sint veritatis reiciendis sunt vero earum. Maiores nemo perspiciatis debitis incidunt atque, placeat pariatur in ut tempore, eius omnis facilis architecto quos, rem quis molestias eum illum eligendi ipsam nisi ipsa cumque! Non vitae aliquid ex doloremque assumenda maxime, consectetur, exercitationem amet omnis, reiciendis doloribus debitis! Nobis enim voluptate nam expedita assumenda totam omnis eos porro maiores veritatis nulla, iste blanditiis necessitatibus libero earum dolorem velit quidem vel, odio magnam at saepe. Veniam, magnam, eaque! Alias consequatur, voluptates autem distinctio. Nostrum optio facere, consequuntur. In nisi distinctio placeat ab, accusamus voluptatum, soluta aliquam magni incidunt sapiente voluptatem debitis hic consequuntur iste natus doloremque ex. Unde, voluptatem! Doloribus inventore consectetur, id culpa delectus obcaecati nihil cumque nam, porro quidem accusamus consequatur provident eos, ex nulla aliquid! Minima libero tenetur, aliquam enim, vel laborum hic minus unde alias inventore voluptatibus quos, eius voluptatem sunt, nam cumque. Fugit tempora, distinctio facere illo? Tempore ipsa temporibus ut maxime nesciunt obcaecati, omnis, fugiat quam repudiandae voluptatibus voluptatum, officiis delectus libero accusamus dolores nam ea debitis a deleniti beatae. Dicta nam sint nisi voluptas reiciendis accusamus quisquam officia, placeat dolor illo ipsa labore vitae rem quos quidem distinctio fugit vel, magni ea. Atque nam in aut inventore necessitatibus ducimus eos tempora dolor dolorem saepe earum sapiente, iusto, dolore vero odio, recusandae et consequatur. Hic cumque libero neque amet commodi. Voluptatibus, eum, sit. Repellendus amet rem asperiores assumenda earum nulla, natus provident iure reprehenderit! 
+        </div>
     </main>
     <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video" style="display:none;">
     <script src="assets/js/vendor.min.js"></script>
