add popup fix some bugs

--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -124,8 +124,7 @@
                                                             <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Poule</label>
                                                         </li>
                                                         <li>
-                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Viandes, légumes et produits
-                                                        laitierst</label>
+                                                            <label><input type="checkbox" class="f-checkbox" rel="attribute-two"/>Viandes, légumes et produits laitierst</label>
                                                         </li>
                                                     </ul>
                                                 </form>
@@ -254,49 +253,49 @@
                             <h2 class="h2 decoration">POULET</h2>
                             <ul class="products-list">
                                 <li class="list-item">
-                                    <a href="#" class="product-link">
+                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
                                         <img src="assets/images/entier.png" alt="entier">
                                     </a>
                                     <span class="item-name">Entier</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li class="list-item">
-                                    <a href="#" class="product-link">
+                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
                                         <img src="assets/images/filets.png" alt="filets">
                                     </a>
                                     <span class="item-name">Filets</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li class="list-item">
-                                    <a href="#" class="product-link">
+                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
                                         <img src="assets/images/ailes.png" alt="ailes">
                                     </a>
                                     <span class="item-name">Ailes</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li class="list-item">
-                                    <a href="#" class="product-link">
+                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
                                         <img src="assets/images/abats.png" alt="abats">
                                     </a>
                                     <span class="item-name">Abats</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li class="list-item">
-                                    <a href="#" class="product-link">
+                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
                                         <img src="assets/images/co-produit.png" alt="co-produit">
                                     </a>
                                     <span class="item-name">Co-produit</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li class="list-item">
-                                    <a href="#" class="product-link">
+                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
                                         <img src="assets/images/elabores.png" alt="elabores">
                                     </a>
                                     <span class="item-name">Elabores</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
                                 <li class="list-item">
-                                    <a href="#" class="product-link">
+                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
                                         <img src="assets/images/guisses.png" alt="guisses">
                                     </a>
                                     <span class="item-name">Guisses</span>
@@ -355,6 +354,54 @@
                                     <a href="#" class="item-button"></a>   
                                 </li>
                             </ul>
+                            <div class="product-popup hide-content" id="product-popup">
+                                <div class="popup-top">
+                                    <span class="popup-title"><i class="icon-poulet"></i>Poulet - Cuisse</span>
+                                    <button data-fancybox-close class="close-popup" title="Close"></button>
+                                </div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                <div class="popup-main">
+                                    <span class="marked-red"><i class="icon-package"></i>Caractéristiques</span>
+                                    <div class="popup-info-row">
+                                        <a href="#" class="btn favoris-link">Favoris</a>
+                                        <div class="text-field">
+                                            <strong>Cuisse entière</strong>
+                                        </div>
+                                        <div class="icons-field">
+                                            <i class="icon-i-snow"></i>
+                                            <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
+                                            <div class="img-holder"><img src="assets/images/logo-small_bbc.png" alt="BBC"></div>
+                                            <div class="img-holder"><img src="assets/images/logo-small_label-r.png" alt="label-Rouge"></div>
+                                        </div>   
+                                    </div>
+                                    <div class="popup-info-row">
+                                        <a href="#" class="btn favoris-link">Favoris</a>
+                                        <div class="text-field">
+                                            <strong>Haut de cuisse</strong>
+                                        </div>
+                                        <div class="icons-field">
+                                            <i class="icon-i-snow"></i>
+                                            <div class="img-holder"><img src="assets/images/logo-small_halal.png" alt="halala"></div>
+                                            <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
+                                        </div>   
+                                    </div>
+                                    <div class="popup-info-row">
+                                        <a href="#" class="btn favoris-link">Favoris</a>
+                                        <div class="text-field">
+                                            <strong>Cuisse s/peau</strong>
+                                        </div>
+                                        <div class="icons-field">
+                                            <i class="icon-i-snow"></i>
+                                            <i class="icon-thermometer-outlined-symbol-of-stroke"></i>
+                                            <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
+                                        </div>   
+                                    </div>
+                                </div>
+                                <div class="popup-bottom">
+                                    <p>Pour plus d’informations</p>
+                                    <a href="#" class="btn">Contactez-nous</a>
+                                </div> 
+                            </div>
                         </div>
                     </div>
                 </div>
